# app/controllers/api/v1/posts/likes_controller.rb
@@ -29,6 +29,6 @@ class Api::V1::Posts::LikesController < Api::BaseController
     end
 
     @devlog = post.postable
-    render json: { error: "Resource not found", request_id: request.request_id }, status: :not_found unless @devlog
+    render json: { error: "Resource not found", request_id: request.request_id }, status: :not_found and return unless @devlog
   end
 end
